--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/echarts": "^4.9.8",
+    "@types/lodash": "^4.14.170",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.5",
+    "echarts": "^5.1.2",
+    "lodash": "^4.17.21",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
