--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@types/echarts": "^4.9.8",
     "@types/lodash": "^4.14.170",
+    "ant-design-vue": "^1.7.5",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.5",
-    "echarts": "^5.1.2",
+    "echarts": "^4.9.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
